--- a/docker/.env
+++ b/docker/.env
@@ -1,5 +1,5 @@
-SYS_CORE=3.6.4
-SYS_WEB=2.27.2
+SYS_CORE=3.8
+SYS_WEB=2.30.0
 
 PG_HOST=semona_db
 PG_PORT=5432
@@ -33,4 +33,4 @@ STORE_USER=cassandra
 STORE_PASSWORD=cassandra
 
 # ссылка на магазин виджетов и порт вызова приложения
-WIST_URL=https://wist.inspark.ru
+WIST_URL=https://widget.inspark.ru
